@@ -8,6 +8,7 @@ bin_SCRIPTS = \
 	cray.sh \
 	facetall.sh \
 	indent.sh \
+	ios-icons.sh \
 	news2tracker.sh \
 	pixinfo.sh \
 	pixread.sh \
